--- a/ProfilUser/ProfilUser.phtml
+++ b/ProfilUser/ProfilUser.phtml
@@ -216,8 +216,8 @@ summary{
                              </div>
                             <?php if( $value['iduser']==$_SESSION['idUser'] ): ?>
                               <div class="reglage_pub">
-                                <span style="cursor: pointer;" data-bs-toggle="modal" data-bs-target="#exampleModalee<?=$value['id']?>">x<i class="fa-solid fa-pen-to-square text-warning"></i></span> 
-                                <span style="cursor: pointer;" data-bs-toggle="modal" data-bs-target="#delete_pub<?=$value['id']?>" class=" px-2">w<i class="fa-solid fa-trash text-danger"></i></span> 
+                                <span style="cursor: pointer;" data-bs-toggle="modal" data-bs-target="#exampleModalee<?=$value['id']?>"><i class="fa-solid fa-pen-to-square text-warning"></i></span> 
+                                <span style="cursor: pointer;" data-bs-toggle="modal" data-bs-target="#delete_pub<?=$value['id']?>" class=" px-2"><i class="fa-solid fa-trash text-danger"></i></span> 
                               </div>
                             <?php endif; ?>
                         </div> 
@@ -245,13 +245,12 @@ summary{
                         </div>
 
                       <div class="comments">
-                         <button class="btn btn-outline-primary position-relative " onclick="toasty()">
+                         <button id="show_comments"  class="btn_show btn btn-outline-primary position-relative" >
                                <i  class="fa-solid fa-comment "></i>
                                <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-info">
                                    <?=$user->somme_comment_by_id_pub($value['id'])?>
                              </span>
                          </button>
-                       
                       </div>
                       
                         <div class="enregistrer">
@@ -287,7 +286,7 @@ summary{
                                <input type="hidden" name="pub" value="<?=isset($value['id']) ? $value['id'] : ''?>">
                                <textarea name="comment" required style="width:100%;height:3%"  cols="1" rows="1"></textarea>
                                <input type="hidden" name="id_user" value="<?=$value['iduser']?>">
-                               <button name="add_comment" class="button">Send</button>
+                               <button type="submit" name="add_comment" class="button">Send</button>
                          </form>
                          </div>
                      
@@ -295,15 +294,15 @@ summary{
                                          <?php $idpub_current=$value['id']; ?>
                                               <?php foreach($user->get_comment_idpub($value['id']) as $comment): ?>
                                                         <?php if($comment['id_user']==$_SESSION['idUser']){ ?>
-                                                            <div class="reglage_pub float-end mb-5">
-                                                            <span style="cursor: pointer;" data-bs-toggle="modal" data-bs-target="#edit_comment<?=$comment['id_comments']?>">dd</span> 
-                                                               <span style="cursor: pointer;" data-bs-toggle="modal" data-bs-target="#delete_comment<?=$comment['id_comments']?>" class=" px-2">ff</span> 
+                                                            <div class="reglage_pub float-end mb-5"> 
+                                                               <span style="cursor: pointer;" data-bs-toggle="modal" data-bs-target="#edit_comment<?=$comment['id_comments']?>"><i class="fa-solid fa-pen-to-square text-warning"></i></span> 
+                                                               <span style="cursor: pointer;" data-bs-toggle="modal" data-bs-target="#delete_comment<?=$comment['id_comments']?>" class=" px-2"><i class="fa-solid fa-trash text-danger"></i></span> 
                                                             </div>
                                                         <?php ?> 
                                                         <?php }else{?>
                                                            <?php if($user->get_iduser_byidpub_created($idpub_current,$_SESSION['idUser'])){  ?>
                                                             <div class="reglage_pub float-end mb-5">
-                                                               <span style="cursor: pointer;" data-bs-toggle="modal" data-bs-target="#delete_comment<?=$comment['id_comments']?>" class=" px-2">ff</span> 
+                                                               <span style="cursor: pointer;" data-bs-toggle="modal" data-bs-target="#delete_comment<?=$comment['id_comments']?>" class=" px-2"><i class="fa-solid fa-trash text-danger"></i></span> 
                                                             </div>
                                                             <?php }  ?>
                                                         <?php } ?>
@@ -380,6 +379,11 @@ summary{
                 <?php endforeach; ?>
 
     <script>
+      let btn=document.querySelector(".btn_show");
+      btn.addEventListener('click',function(){
+        $("#show_comments").click()
+    });
+
 
       /**:) Finally*/
 let text=document.querySelector(".textarea");
