--- a/get_all_user/get_all_user.phtml
+++ b/get_all_user/get_all_user.phtml
@@ -11,18 +11,18 @@
   <?php // endif; ?>
  <?php
     foreach($user->get_invi_user($_SESSION['idUser']) as $value):
+
     ?>
         <?php $user_inviter=$user->get_user($value['id_user1']); ?>
         <div class="mosule d-flex justify-content-center mb-2">
-                     <img src="..<?=$user_inviter['photo_user'];?>" width="70px" height="40px" class="rounded img-thumbnail shadow-sm" alt="">
-                      <div class="body py-3 px-2">
-                      <p class="m-0" id="text"><?=$user_inviter['name'];?><?=$user_inviter['last_name'];?></p>
-                
+                   <img src="..<?=$user_inviter['photo_user'];?>" width="70px" height="40px" class="rounded img-thumbnail shadow-sm" alt="">
+                   <div class="body py-3 px-2">
+                   <p class="m-0" id="text"><?=$user_inviter['name'];?><?=$user_inviter['last_name'];?></p>
      </div>           
   </div>
   <div class="d-flex justify-content-center gap-3">
         <a href="index.php?id_confirmer=<?=$user_inviter['iduser']?><?=isset($_GET['changer']) ? '&changer' : ''?>"><button class="btn btn-primary px-2">Confirmer</button></a>
-        <a href="index.php?id_cancel=<?=$user_inviter['iduser']?><?=isset($_GET['changer']) ? '&changer' : ''?>"><button  class="btn btn-secondary">Annuler</button></a>
+        <a href="index.php?id_cancel=<?=$value['id']?><?=isset($_GET['changer']) ? '&changer' : ''?>"><button  class="btn btn-secondary">Annuler</button></a>
   </div>
     <?php endforeach; ?>
   </div>
@@ -47,7 +47,6 @@
                                 Ajouter
                             </button>
                   </a>
-                  <a href="index.php?id_cancel=<?=$value['iduser']?><?=isset($_GET['changer']) ? '&changer' : ''?>"><button  class="btn btn-secondary">Cancel</button></a>
       </div>
 <hr>
 <?php endif; ?>
