--- a/listamis/listamis.phtml
+++ b/listamis/listamis.phtml
@@ -1,33 +1,33 @@
-
-<table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
-  <thead>
-     <tr>
-        <th>id</th>
-        <th>Name</th>
-        <th>email</th>
-     </tr>
-     </thead>
-       <?php if($all_user_filter=='vide'): ?>
-        <tbody>
-        <tr >
-          <td colspan="3" class="text-center">Empty</td>
-        </tr>
-        <?php else: ?>
-      <?php foreach($all_user_filter as $value): ?>
-     <tbody>
-        <tr>
-          <td><?=$value['iduser']?></td>
-          <td><?=$value['name']?></td>
-          <td><?=$value['email']?></td>
-     </tr>
-     </tbody>
-     <?php endforeach; ?>
- <?php endif; ?>
-</table>
-
-
-<?php 
-/*echo "<pre>";
-var_dump($all_friends);
-echo "</pre>";*/
-?>
+<div class="container py-2 mt-2">
+  <h1 class="text-center">List Amis</h1>
+  <div class="row py-4">
+  <?php foreach($all_user_filter as $value): ?>
+         <div class="col-lg-3">
+            <div class="text-center">
+            <img class="rounded" style="width: 100px !imporant;height:100px !important" src="..<?=$value['photo_user']?>" alt="">
+               <p>
+                 <?=$value['name']?>
+               </p>
+               <button class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#exampleModal<?=$value['iduser']?>"><i class="fa-solid fa-trash"></i></button>
+            </div>
+              <div class="modal fade" id="exampleModal<?=$value['iduser']?>" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+               <div class="modal-dialog">
+                  <div class="modal-content">
+                   <div class="modal-header">
+                      <h5 class="modal-title" id="exampleModalLabel">Retirer Friend</h5>
+                      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                   </div>
+                    <div class="modal-body">
+                       Do You Want Delete <?=$value['name']?>
+                    </div>
+                    <div class="modal-footer">
+                      <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                      <a href="index.php?id_user_retirer=<?=$value['iduser']?>"><button type="button" class="btn btn-danger">Delete</button></a>   
+                    </div>
+                 </div>
+               </div>
+              </div>
+         </div>
+     <?php endforeach; ?>   
+     </div>
+  </div>
