--- a/auth_layout.phtml
+++ b/auth_layout.phtml
@@ -5,14 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../assets/css/style.css">
+    <link rel="icon" href="../assets/image/logo_final.png" type="image/x-icon">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
       <link rel="icon" href="../../assets/image/logo_final.png" type="image/x-icon">
-      <link href="../../assets/vendor/aos/aos.css" rel="stylesheet">
-      <link href="../../assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-      <link href="../../assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-      <link href="../../assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-      <link href="../../assets/vendor/remixicon/remixicon.css" rel="stylesheet">
-      <link href="../../assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
       <title><?=$page_titel?></title>
       <style>
          body{
