--- a/listamis/listamis.phtml
+++ b/listamis/listamis.phtml
@@ -1,16 +1,41 @@
 <div class="container py-2 mt-2">
-  <h1 class="text-center" id="text">List Amis</h1>
-   <?php if($all_user_filter=='vide'): ?>
+  <h1 class="text-center" id="text">List Amis [ <?=$count?> ]</h1>
+   <?php if($all_friends=='vide'): ?>
          <div class="alert alert-danger">
                No User FOUND
          </div>
       <?php else: ?>
+          <div class="row mt-5">
+            <div class="col-lg-4 ">
+            <form action="index.php" method="GET">
+                   <div class="d-flex gap-3">
+                     <input class="form-control" placeholder="search..." type="search" name="search" value="<?=isset($_GET['search']) ? $_GET['search'] : ''?>">
+                     <button class="btn btn-warning" name="btn_search">search</button> 
+                  </div>
+              </form>
+              <small id="text" class="text-danger mx-2 " ><?= array_key_exists('search',$error) ? $error['search'] :''; ?></small>
+            </div>
+              <div class="col-lg-4 text-center">   
+                 <form action="index.php" method="GET">
+                      <input  type="hidden" type="text" name="search" value="<?=isset($_GET['search']) ? $_GET['search'] : ''?>">
+                      <input type="hidden" id="record_choix" value="<?=isset($_GET['record']) ? $_GET['record'] : 5 ?>">
+                        <label id="text" >Nbr</label>
+                         <select class="custom-select custom-select-sm form-control-sm" name="record" id="record" onchange="this.form.submit()">
+                         <?php foreach([10,100,5,1] as $init) :?>
+                           <option value="<?=$init?>"><?=$init?></option>
+                           <?php endforeach; ?>
+                     </select>
+                 </form>
+              </div>
+          </div>
   <div class="row py-4">
-  <?php foreach($all_user_filter as $value): ?>
-         <div class="col-lg-3">
+     
+  <?php foreach($all_friends as $value): ?>
+     
+         <div class="col-lg-3 mb-4">
             <div class="text-center">
             <img class="rounded" style="width: 100px !imporant;height:100px !important" src="..<?=$value['photo_user']?>" alt="">
-               <p>
+               <p id="text">
                  <?=$value['name']?>
                </p>
                <button class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#exampleModal<?=$value['iduser']?>"><i class="fa-solid fa-trash"></i></button>
@@ -34,6 +59,44 @@
               </div>
          </div>
      <?php endforeach; ?>   
+
      </div>
+     <nav aria-label="Page navigation example ">
+  <ul class="pagination justify-content-end">
+    <li class="page-item " >
+      <a class="page-link" <?= $previous==$page ? 'disabled' :''?> href="index.php?page=<?=$previous?>&<?=isset($_GET['search']) ? 'search='.$_GET['search'].'&' : '' ?><?=isset($_GET['record']) ? '&record='.$_GET['record'] : '' ?>">Previous</a>
+    </li>
+    <?php for($i=1;$i<=$pages;$i++){ 
+
+       if($i==$page){
+          $active="active";
+       }else{
+         $active="";
+       }
+      
+      ?>
+            
+          <li class="page-item" <?=$active?> ><a class="page-link" href="index.php?page=<?=$i?>&<?=isset($_GET['search']) ? 'search='.$_GET['search'].'&' : '' ?><?=isset($_GET['record']) ? '&record='.$_GET['record'] : '' ?>"> <?=$i?></a></li>
+    <?php  }?>
+    <li class="page-item">
+      <a class="page-link"href="index.php?page=<?=$next?>&<?=isset($_GET['search']) ? 'search='.$_GET['search'].'&' : '' ?><?=isset($_GET['record']) ? '&record='.$_GET['record'] : '' ?>">Next</a>
+    </li>
+  </ul>
+</nav>
      <?php endif;?>
   </div>
+
+
+
+  <script>
+
+   let record=document.getElementById('record_choix').value;
+   let Select=document.getElementById('record');
+   for(let i=0;i<Select.length;i++){
+      if(Select[i].value==record){
+         Select[i].setAttribute('selected','selected');
+      }
+   }
+
+
+  </script>
